Upgraded to latest Spring and Java 17 version